# Bachelor-Thesis

./: CITATION.cff  LICENSE  README.md  assembling.py  pyproject.toml  structure.txt
docs/source/: cli.rst  conf.py  index.rst  installation.rst  model.rst  usage.rst
outputs/2025-03-16/16-48-10/.hydra/: hydra.yaml
results/Pragmatic_Evaluation/: Visual_RFT.json  open_R1.json  qvq-72b.json  qwen2-vl-72b.json  qwen2-vl-7b.json
src/resp_gen_ai/: __init__.py  __main__.py  api.py  cli.py  constants.py  version.py
src/resp_gen_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/resp_gen_ai/datasets/: dataset.py
src/resp_gen_ai/datasets/jailbreaks/: jailbreak_datasets.py  pre_post_process.py
src/resp_gen_ai/hydra_files/: config.yaml
src/resp_gen_ai/hydra_files/data_base/: figstep_safebenchtiny.yaml
src/resp_gen_ai/hydra_files/judge_model/: granite_guard.yaml  llama_guard_3_1b.yaml
src/resp_gen_ai/hydra_files/model/: eureka32b.yaml  pku_ds_v.yaml
src/resp_gen_ai/metrics/jailbreak/: evaluate.py
src/resp_gen_ai/models/: __init__.py
src/resp_gen_ai/models/llms/: Llama_Guard_3_1B.py  __init__.py  base.py  chatglm.py  conv_template.py  granite_guardian_3_5b.py  guanaco.py  llama.py  llama_guard.py  llama_guard_3_8B.py  llm_inference_zoo.py  mistral.py  mpt.py  pythia.py  stable_vicuna.py  vicuna.py
src/resp_gen_ai/models/mllms/: __init__.py  base.py  cogvlm_modeling.py  fuyu_modeling.py  idefics2.py  instruct_blip_modeling.py  internvl2_5_modeling.py  llama_adapter_v2_modeling.py  llava_modeling.py  minigpt4_modeling.py  mllm_inference_zoo.py  mplug_owl2_modeling.py  pku_ds_v_modeling.py  qwen2_5_vl_instruct_vllm_modeling.py  qwen2_vl_Instruct_modeling.py  qwen2_vl_instruct_vllm_modeling.py  qwen2_vl_modeling.py  qwen_vl_modeling.py  test_cases.py
src/resp_gen_ai/models/rmllms/: VLM-R1_modeling.py  __init__.py  eureka_32b_modeling.py  open_R1_multimodal_modeling.py  pku_ds_v_modeling.py  rmllm_inference_zoo.py  skywork_R1V_modeling.py  visual_rft_modeling.py  vlm_R1.py
src/resp_gen_ai/tasks/llm_detection/: test.ipynb
src/resp_gen_ai/tasks/reasoning/: cot_decoding.py  got.py  tot.py
tests/: __init__.py  test_version.py
use_cases/: calculate_asr_lm.py  calculate_asr_lm_for_single.py  calculate_only_asr_from_json.py  evalutor_llama_guard_3_8B.py  evalutor_strong_reject.py  evalutor_strong_reject_one_by_one.py  evalutor_strong_reject_one_by_one_copy.py
use_cases/evaluation_results/: 111111.json  1111112.json  12042025_pku-ds_mini.json  1604FigStep.json  Eureka_32b_Llama-Guard-3-1B.json  PKU-DS-V_Llama-Guard-3-1B.json  VRP_first_try.json  VRP_pku_ds.json  VRP_pku_ds_2.json  ds_v_with_strong_reject_mini.json  eureka_32b.json  eureka_32b_with_judge.json  eureka_32b_with_judge_HYDRA.json  evaluation_DS_V.json  first_fomal_result_with_dsv_strong_reject_mini.json  golden_asr_from_DS_V.txt  llama_guard_result.json  mulberry_llava_8b_11042025.json  only_to_store_the exception.json  test_batchmodal.json  test_batchmodal_mini.json  vlm-r1.json
use_cases/evaluation_results/VRP-results/: evalutor_strong_reject_VRP.py
use_cases/evaluation_results/baseline/: baseline_Open_R1_multimodal.json
use_cases/evaluation_results/cognitive_overload_effect_to_cause/: jailbreak_pku_dsv_hf_batch.py
use_cases/evaluation_results/cognitive_overload_veiled_attack/: cognitive_overload_veiled_attack_Open_R1_multimodal.json
use_cases/evaluation_results/imgJP/: 06052025_imgJP_open_r1.json  evalutor_strong_reject_imgJP.py
use_cases/evaluation_results/imgJP/with_evaluation/: strong_reject_Open_R1.json
use_cases/jailbreak/: 1.sh  jailbreak_llm.py  jailbreak_mllm.py  jailbreak_mllm_hydra.py  jailbreak_mulberry_llava_8b_with-vllm_batch.py  jailbreak_qvq_72b_vllm_batch.py  jailbreak_rmllm.py  jailbreak_rmllm_hf_batch.py  jailbreak_skywork_R1V-vllm_batch.py  jailbreak_skywork_R1V_with-vllm.py  jailbreak_visual_RFT_batch_hf.py  jailbreak_vlm_R1_bath_vllm.py  jailbreak_vlm_R1_with-vllm.py  jalbreak_open_r1_multimodal_hf_batch.py  test_hydra.py
use_cases/jailbreak/FigStep/: 16042025_seond_round_figstep.json  1704_second_full_figsteps.json  1704_second_full_figsteps_copy.json  FigStep_QWQ_32B.py  REBench_FigStep.csv  clean_figstep.py  double_check.py  empty_figsteps.json  final_version_figstep.json  final_version_fitstep.csv  final_version_fitstep_copy.csv  generate_prompts.py  second_round_QWQ_32B.py
use_cases/jailbreak/Multimodal_Pragmatic_Evaluation/: 3_evaluation_QWQ.py  4_formalize_the_judgement.py  5_evaluation_matrix.py  evaluation_QWQ.py  evaluation_matrix.py  make_csv_file.py  run_code.py
use_cases/jailbreak/VRP_query_specific/: generate_character.py  generate_image.py  generate_inference_csv.py  inference.py  requirements.txt  vrp.csv
use_cases/jailbreak/VRP_query_specific/scripts/: generation.sh
use_cases/jailbreak/baseline/: 1604_FINAL.csv
use_cases/jailbreak/cognitive_overload/effect_to_cause/: 12-05_cog_effect_to_cause_final.json  (+2 more)
use_cases/jailbreak/run_models/: jailbreak_pku_dsv_hf_batch.py  jailbreak_qvq_72b_vllm_batch.py  jailbreak_skywork_R1V-vllm_batch.py  jailbreak_visual_RFT_batch_hf.py  jailbreak_vlm_R1_bath_vllm.py  jalbreak_open_r1_multimodal_hf_batch.py
use_cases/jailbreak/truly_usefull_codes/: jailbreak_pku_dsv_hf_batch.py  jailbreak_qvq_72b_vllm_batch.py  jailbreak_qvq_72b_vllm_batch_copy.py  jailbreak_skywork_R1V-vllm_batch.py  jailbreak_visual_RFT_batch_hf.py  jailbreak_vlm_R1_bath_vllm.py  jalbreak_open_r1_multimodal_hf_batch.py
use_cases/load_inference/: calculate_asr_lm_granite_3.2_5b.py  calculate_asr_lm_llama_guard.py
use_cases/load_inference/llms/: run_chat_glm.py  run_llama3.py  run_llama_guard3_8b.py
use_cases/load_inference/mllms/: run_idefics.py  run_llava.py  run_minigpt4.py  run_pku-ds-v.py  run_qwen-vl-chat.py
use_cases/load_inference/reasoning-mllms/: run_eureka32b.py  run_open_r1_multimodel.py  run_pku-ds-v.py  run_skywork_R1V.py  run_skywork_R1V_with-vllm.py  run_visual_RFT.py
(+166 files in other folders)
